@@ -2,8 +2,13 @@ package io.getstream;
 
 import io.getstream.exceptions.StreamException;
 import io.getstream.models.*;
-import io.getstream.services.Common;
-import java.util.*;
+import io.getstream.services.ChatService;
+import io.getstream.services.CommonService;
+import io.getstream.services.VideoService;
+import io.getstream.services.framework.StreamSDKClient;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
@@ -12,124 +17,148 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 
 public class BasicTest {
-  protected static UserResponse testUser;
-  protected static List<UserResponse> testUsers = new ArrayList<>();
+  static StreamSDKClient client;
 
-  //  protected static ChannelStateResponse testChannelGetResponse;
-  //  protected static ChannelResponse testChannel;
-  //  protected static MessageResponse testMessage;
+  protected static FullUserResponse testUser;
+  protected static List<FullUserResponse> testUsers = new ArrayList<>();
+  protected static ChannelStateResponse testChannelGetResponse;
+  protected static ChannelResponse testChannel;
+  protected static MessageResponse testMessage;
+  static ChatService chat = StreamSDKClient.getInstance().chat();
+  static CommonService common = StreamSDKClient.getInstance().common();
+  static VideoService video = StreamSDKClient.getInstance().video();
 
   @BeforeAll
-  static void setup() throws StreamException, SecurityException, IllegalArgumentException {
+  static void setup() throws Exception {
     setProperties();
-    // cleanChannels();
-    // cleanChannelTypes();
+    cleanChannels();
+    cleanChannelTypes();
     cleanBlocklists();
-    // cleanCommands();
+    cleanCommands();
     upsertUsers();
-    // createTestChannel();
-    // createTestMessage();
+    createTestChannel();
+    createTestMessage();
+    pause();
+
+    client = StreamSDKClient.getInstance();
+
+    common = client.common();
+    chat = client.chat();
+    video = client.video();
   }
 
-  //  private static void cleanChannels() throws StreamException {
-  //    while (true) {
-  //      List<String> channels =
-  //              new ChatClient.QueryChannels(QueryChannelsRequest.builder().build())
-  //              .request().getChannels().stream()
-  //              .map(channel -> channel.getChannel().getCid())
-  //              .collect(Collectors.toList());
-  //
-  //      if (channels.size() == 0) {
-  //        break;
-  //      }
-  //
-  //      var deleteManyResponse = new
-  // ChatClient.DeleteChannels(DeleteChannelsRequest.builder().cids(channels).hardDelete(true).build()).request();
-  //      String taskId = deleteManyResponse.getTaskId();
-  //      Assertions.assertNotNull(taskId);
-  //
-  //      System.out.printf("Waiting for channel deletion task %s to complete...\n", taskId);
-  //
-  //      while (true) {
-  //        GetTaskResponse response = new Common.GetTask(taskId).request();
-  //        String status = response.getStatus();
-  //
-  //        if (status.equals("completed") || status.equals("ok")) {
-  //          break;
-  //        }
-  //        if (status.equals("failed") || status.equals("error")) {
-  //          throw new StreamException(
-  //              String.format("Failed to delete channel(task_id: %s): %s", response.getTaskId(),
-  // status),
-  //              (Throwable) null);
-  //        }
-  //
-  //        // wait for the channels to delete
-  //        Assertions.assertDoesNotThrow(() -> Thread.sleep(500));
-  //      }
-  //    }
-  //  }
+  private static void cleanChannels() throws StreamException, NullPointerException {
+    while (true) {
+      List<String> channels =
+          chat
+              .queryChannels(QueryChannelsRequest.builder().build())
+              .execute()
+              .getData()
+              .getChannels()
+              .stream()
+              .map(channel -> channel.getChannel().getCid())
+              .collect(Collectors.toList());
 
-  //  private static void cleanChannelTypes() throws StreamException {
-  //    new ChatClient.ListChannelTypes().request()
-  //        .getChannelTypes()
-  //        .values()
-  //        .forEach(
-  //            channelType -> {
-  //              try {
-  //                new ChatClient.DeleteChannelType(channelType.getName()).request();
-  //              } catch (StreamException e) {
-  //                // Do nothing. Happens when there are channels of that type
-  //              }
-  //            });
-  //  }
+      if (channels.isEmpty()) {
+        break;
+      }
 
-  private static void cleanBlocklists() throws StreamException {
-    new Common.listBlockLists()
-        .request()
+      var deleteManyResponse =
+          chat.deleteChannels(
+                  DeleteChannelsRequest.builder().cids(channels).hardDelete(true).build())
+              .execute();
+      String taskId = deleteManyResponse.getData().getTaskID();
+      Assertions.assertNotNull(taskId);
+
+      System.out.printf("Waiting for channel deletion task %s to complete...\n", taskId);
+
+      while (true) {
+        var response = common.getTask(taskId).execute();
+        String status = response.getData().getStatus();
+
+        if (status.equals("completed") || status.equals("ok")) {
+          break;
+        }
+        if (status.equals("failed") || status.equals("error")) {
+          throw new StreamException(
+              String.format(
+                  "Failed to delete channel(task_id: %s): %s",
+                  response.getData().getTaskID(), status),
+              (Throwable) null);
+        }
+
+        // wait for the channels to delete
+        Assertions.assertDoesNotThrow(() -> Thread.sleep(500));
+      }
+    }
+  }
+
+  private static void cleanChannelTypes() throws Exception {
+    chat.listChannelTypes()
+        .execute()
+        .getData()
+        .getChannelTypes()
+        .values()
+        .forEach(
+            channelType -> {
+              try {
+                chat.deleteChannelType(channelType.getName()).execute();
+              } catch (Exception e) {
+                // Do nothing. Happens when there are channels of that type
+              }
+            });
+  }
+
+  private static void cleanBlocklists() throws Exception {
+    common
+        .listBlockLists()
+        .execute()
+        .getData()
         .getBlocklists()
         .forEach(
             blocklist -> {
               try {
-                new Common.deleteBlockList(blocklist.getName()).request();
-              } catch (StreamException e) {
+                common.deleteBlockList(blocklist.getName()).execute();
+              } catch (Exception e) {
                 // Do nothing this happens for built in
               }
             });
   }
 
-  //  private static void cleanCommands() throws StreamException {
-  //    new ChatClient.ListCommands()
-  //        .request()
-  //        .getCommands()
-  //        .forEach(
-  //            command -> {
-  //              try {
-  //                new ChatClient.DeleteCommand(command.getName()).request();
-  //              } catch (StreamException e) {
-  //                // Do nothing
-  //              }
-  //            });
-  //
-  //    waitFor(
-  //        () -> {
-  //          var commands =
-  //              Assertions.assertDoesNotThrow(() -> new
-  // ChatClient.ListCommands().request().getCommands());
-  //          return commands.size() == 5; // Built-in 5 commands
-  //        });
-  //  }
-  //
-  //  private static void createTestMessage() throws StreamException {
-  //    testMessage = sendTestMessage();
-  //  }
-  //
-  //  private static void createTestChannel() throws StreamException {
-  //    testChannelGetResponse = createRandomChannel();
-  //    testChannel = testChannelGetResponse.getChannel();
-  //  }
 
-  static void upsertUsers() throws StreamException {
+  private static void cleanCommands() throws Exception {
+    chat.listCommands()
+        .execute()
+        .getData()
+        .getCommands()
+        .forEach(
+            command -> {
+              try {
+                chat.deleteCommand(command.getName()).execute();
+              } catch (Exception e) {
+                // Do nothing
+              }
+            });
+
+    waitFor(
+        () -> {
+          var commands =
+              Assertions.assertDoesNotThrow(
+                  () -> chat.listCommands().execute().getData().getCommands());
+          return commands.size() == 5; // Built-in 5 commands
+        });
+  }
+
+  private static void createTestMessage() throws Exception {
+    testMessage = sendTestMessage();
+  }
+
+  private static void createTestChannel() throws Exception {
+    testChannelGetResponse = createRandomChannel();
+    testChannel = testChannelGetResponse.getChannel();
+  }
+
+  static void upsertUsers() throws Exception {
     UserRequest testUserRequestObject =
         UserRequest.builder()
             .id(RandomStringUtils.randomAlphabetic(10))
@@ -163,9 +192,9 @@ public class BasicTest {
             .build();
 
     testUsers =
-        new Common.updateUsers(updateUsersRequest)
-            .request().getUsers().values().stream().map(BasicTest::fromFullUserResponse).toList();
-    testUser = testUsers.getFirst();
+        common.updateUsers(updateUsersRequest).execute().getData().getUsers().values().stream()
+            .toList();
+    testUser = testUsers.get(0);
   }
 
   // create a function to convert a FullUserResponse to a UserObject
@@ -187,6 +216,8 @@ public class BasicTest {
         .teams(fullUserResponse.getTeams())
         .privacySettings(fullUserResponse.getPrivacySettings())
         .pushNotifications(fullUserResponse.getPushNotifications())
+        .shadowBanned(fullUserResponse.getShadowBanned())
+        .blockedUserIds(fullUserResponse.getBlockedUserIds())
         .build();
   }
 
@@ -198,35 +229,43 @@ public class BasicTest {
 
   protected static List<ChannelMember> buildChannelMembersList() {
     return testUsers.stream()
-        .map(user -> ChannelMember.builder().user(user).build())
+        .map(user -> ChannelMember.builder().userID(user.getId()).build())
         .collect(Collectors.toList());
   }
 
-  //  protected static ChannelStateResponse createRandomChannel() throws StreamException {
-  //    return new ChatClient.GetOrCreateChannel("team", RandomStringUtils.randomAlphabetic(12),
-  // ChannelGetOrCreateRequest.builder().data(
-  //                ChannelInput.builder()
-  //                .createdBy(testUser)
-  //                .members(buildChannelMembersList())
-  //                .build()).build())
-  //        .request();
-  //  }
-  //
-  //  protected static MessageResponse sendTestMessage() throws StreamException {
-  //    String text = UUID.randomUUID().toString();
-  //    MessageRequest messageRequest =
-  //        MessageRequest.builder().text(text).userId(testUser.getId()).build();
-  //    return new ChatClient.SendMessage(testChannel.getType(), testChannel.getId(),
-  // SendMessageRequest.builder().message(messageRequest).build())
-  //        .request()
-  //        .getMessage();
-  //  }
+  protected static ChannelStateResponse createRandomChannel() throws Exception {
+    return chat.getOrCreateChannel(
+            "team",
+            RandomStringUtils.randomAlphabetic(12),
+            ChannelGetOrCreateRequest.builder()
+                .data(
+                    ChannelInput.builder()
+                        .createdBy(UserRequest.builder().id(testUser.getId()).build())
+                        .members(buildChannelMembersList())
+                        .build())
+                .build())
+        .execute()
+        .getData();
+  }
+
+  protected static MessageResponse sendTestMessage() throws Exception {
+    String text = UUID.randomUUID().toString();
+    MessageRequest messageRequest =
+        MessageRequest.builder().text(text).userID(testUser.getId()).build();
+    return chat.sendMessage(
+            testChannel.getType(),
+            testChannel.getId(),
+            SendMessageRequest.builder().message(messageRequest).build())
+        .execute()
+        .getData()
+        .getMessage();
+  }
 
   /**
    * This is used to pause after creation, as there can be a small delay before we can act upon the
    * resource
    */
-  protected void pause() {
+  protected static void pause() {
     try {
       java.lang.Thread.sleep(6000);
     } catch (InterruptedException e) {
